--- a/APIsASManager.CoreV3/appsettings.json
+++ b/APIsASManager.CoreV3/appsettings.json
@@ -9,11 +9,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TALogConnection": "Server=localhost\\SQLEXPRESS;Database=TALog;User ID=sa;Password=www.tasystemth.com;Trusted_Connection=True;Integrated Security=false;MultipleActiveResultSets=True;",
-    "TAConfigConnection": "Server=localhost\\SQLEXPRESS;Database=TAConfig;User ID=sa;Password=www.tasystemth.com;Trusted_Connection=True;Integrated Security=false;MultipleActiveResultSets=True;",
-    //"HangfireConnection": "Server=tasystemth.ddns.net\\TAEXPRESS, 50232;Database=Hangfire;User ID=sa;Password=www.tasystemth.com;Integrated Security=false;",
-    "HangfireConnection": "Server=localhost\\SQLEXPRESS;Database=Hangfire;User ID=sa;Password=www.tasystemth.com;Integrated Security=SSPI;", //for local
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS01;Database=AMWES-PTTOR;User ID=sa;Password=www.amw.com;Trusted_Connection=True;Integrated Security=false;MultipleActiveResultSets=True;",
+    "TALogConnection": "Server=localhost\\SQLEXPRESS;Database=xxx;User ID=xx;Password=xxx;Trusted_Connection=True;Integrated Security=false;MultipleActiveResultSets=True;",
+    "TAConfigConnection": "Server=localhost\\SQLEXPRESS;Databasexxx;User ID=sa;Password=xxx;Trusted_Connection=True;Integrated Security=false;MultipleActiveResultSets=True;",
+    //"HangfireConnection": "Server=localhost;Database=xxe;User ID=xx;Password=xxxx;Integrated Security=false;",
+    "HangfireConnection": "Server=localhost\\SQLEXPRESS;Database=xx;User ID=xx;Password=xxxx;Integrated Security=SSPI;", //for local
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS01;Database=xxx;User ID=xx;Password=xxx;Trusted_Connection=True;Integrated Security=false;MultipleActiveResultSets=True;",
     "SQLiteConnection": "ASManagerLite.db",
     "SQLiteConnection1": "Data Source = ASManagerLite.db"
   },
